# test_task

./: CMakeLists.txt  Client.cpp  Client.h  Common.hpp  Core.cpp  Core.h  Server.cpp  Server.h  main_client.cpp  main_server.cpp  readme.md  tests.hpp
